# librexmr

./: .gitignore  Makefile  README.md  repomix.config.json
.github/workflows/: ci.yml
solana-xmr-swap/: AUDIT_STATUS.md  Anchor.toml  Cargo.toml  Makefile  README.md  SECURITY.md  repomix.config.json
solana-xmr-swap/.github/workflows/: ci.yml
solana-xmr-swap/docs/: ALERT_SCHEMA.json  ARCHITECTURE.md  AUDITED_LIBRARIES.md  AUDIT_BUNDLE.md  DEMO.md  ENV_EXAMPLE.md  HARDENING.md  INTEGRATION.md  PRODUCTION.md  RELEASE_CHECKLIST.md  STAGENET_RUNBOOK.md  TOOLCHAIN.md  VENDOR_PATCHES.md  VENDOR_PATCHES_SHA256.txt  WEBHOOK_VERIFICATION.md  alert_signed_sample.json  audit_signed_sample.json
solana-xmr-swap/frontend/: package-lock.json  package.json  vitest.config.ts
solana-xmr-swap/frontend/src/: App.tsx  config.ts  index.css  main.tsx
solana-xmr-swap/frontend/src/data/: samples.ts
solana-xmr-swap/frontend/src/idl/: atomic_lock.ts
solana-xmr-swap/frontend/src/lib/: alert.test.ts  alert.ts  audit.test.ts  audit.ts  compliance.test.ts  compliance.ts  crypto.ts  dleq.test.ts  dleq.ts  download.ts  helius.test.ts  helius.ts  hex.ts  retry.test.ts  retry.ts  solana.test.ts  solana.ts  validation.test.ts  validation.ts
solana-xmr-swap/frontend/src/sections/: AlertVerifier.tsx  AuditVerifier.tsx  SwapBuilder.tsx  SwapExecution.tsx  SwapStatus.tsx
solana-xmr-swap/programs/atomic_lock/: Cargo.toml
solana-xmr-swap/programs/atomic_lock/src/: errors.rs  events.rs  lib.rs  logging.rs  state.rs
solana-xmr-swap/programs/atomic_lock/src/crypto/: dleq.rs  mod.rs  scalar_mul.rs
solana-xmr-swap/programs/atomic_lock/src/instructions/: initialize.rs  mod.rs  refund.rs  verify_and_unlock.rs  verify_dleq.rs
solana-xmr-swap/programs/atomic_lock/tests/: integration.rs
solana-xmr-swap/test_vectors/: dleq_demo.json
solana-xmr-swap/tools/dleq_verifier/: Cargo.toml
solana-xmr-swap/tools/dleq_verifier/src/: lib.rs
solana-xmr-swap/tools/dleq_verifier/tests/: dleq_demo.rs  dleq_vectors.rs
solana-xmr-swap/tools/dleq_verifier_ts/: README.md  package-lock.json  package.json
solana-xmr-swap/tools/dleq_verifier_ts/src/: index.ts
solana-xmr-swap/tools/swap_coordinator/: Cargo.toml  README.md
solana-xmr-swap/tools/swap_coordinator/src/: config.rs  db.rs  driver.rs  lib.rs  main.rs  metrics.rs  solana.rs  state.rs  xmr.rs
solana-xmr-swap/tools/swap_coordinator/tests/: config.rs  driver_metrics.rs  xmr.rs
solana-xmr-swap/tools/swap_ops/: Cargo.toml  README.md
solana-xmr-swap/tools/swap_ops/src/: main.rs
solana-xmr-swap/tools/swap_sdk/: Cargo.toml  README.md
solana-xmr-swap/tools/swap_sdk/src/: lib.rs  main.rs
solana-xmr-swap/tools/swap_sdk/tests/: audit_log.rs
solana-xmr-swap/tools/xmr_simulator/: Cargo.toml  README.md
solana-xmr-swap/tools/xmr_simulator/src/: claim.rs  lib.rs  main.rs  mock_wallet.rs
solana-xmr-swap/tools/xmr_simulator/tests/: flow.rs
solana-xmr-swap/tools/xmr_wallet/: Cargo.toml  README.md
solana-xmr-swap/tools/xmr_wallet/src/: claim.rs  lib.rs  types.rs  watcher.rs
solana-xmr-swap/tools/xmr_wallet/src/crypto/: adaptor.rs  keys.rs  mod.rs
solana-xmr-swap/tools/xmr_wallet/src/rpc/: mod.rs  retry.rs  wallet.rs
solana-xmr-swap/tools/xmr_wallet/tests/: claim.rs  crypto.rs  rpc.rs  stagenet.rs  watcher.rs  watcher_rpc.rs
