 [package]
 name = "atomic_lock"
 version = "0.1.0"
 description = "Solana program for XMR <-> SOL atomic swaps"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
 
 [features]
 no-entrypoint = []
 cpi = ["no-entrypoint"]
debug-logs = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
 anchor-lang = "0.32.1"
 anchor-spl = "0.32.1"
 
 curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc"] }
 blake2 = { version = "0.10.6", default-features = false }
 sha2 = { version = "0.10.8", default-features = false }
 zeroize = { version = "1.8.1", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
 rand = "0.8.5"
solana-program-test = "2.3.0"
solana-program = "2.3.0"
solana-sdk = "2.3.0"
spl-token = "8.0.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
