[package]
name = "dleq_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.10.6"
curve25519-dalek = "4.1.3"
rand = "0.8.5"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "dleq-verify"
path = "src/bin/dleq_verify.rs"

[[bin]]
name = "dleq-generate"
path = "src/bin/dleq_generate.rs"
