[package]
name = "swap_coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.89"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.8.5"
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
curve25519-dalek = "4.1"
monero = "0.21"

anchor-lang = "0.32.1"
solana-client = "2.3.0"
solana-sdk = "2.3.0"
solana-system-interface = "1.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"

atomic_lock = { path = "../../programs/atomic_lock", features = ["cpi"] }
dleq_verifier = { path = "../dleq_verifier" }
xmr_wallet = { path = "../xmr_wallet" }
