[package]
name = "swap_ops"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
ed25519-dalek = "2.2.0"
sha2 = "0.10.9"

anchor-lang = "0.32.1"
solana-client = "2.3.0"
solana-sdk = "2.3.0"

atomic_lock = { path = "../../programs/atomic_lock" }
