[package]
name = "swap_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

dleq_verifier = { path = "../dleq_verifier" }
ed25519-dalek = "2.2.0"
sha2 = "0.10.9"
