[package]
name = "xmr_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
curve25519-dalek = { version = "4.1", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
jsonrpc-core = "18.0"
monero = "0.21"
monero-rpc = "0.4"
rand = { version = "0.8", features = ["std_rng"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.15"
